--- a/transcriptions/16v.md
+++ b/transcriptions/16v.md
@@ -4,7 +4,7 @@ date: May 2018
 ---
 
 - [X] Transcribed
-- [ ] Double-checked
+- [X] Double-checked
 
 And with þat sight hir beaute hurt him so  
 That if þat Palamon was wounded sore  
@@ -17,7 +17,7 @@ That I may seen hir atte leste wey
 I nam but ded þer nys no more to sey  
 This Palamon whan he þis wordes herde  
 Dispitously he loked and answerde  
-Wheþ&#777; seistow þis in ernest or in pleye  
+wheþ̔ seistow þis in ernest or in pleye  
 Nay qd Arcite in ernest by my feye  
 God helpe me so me lust ful yuel playe  
 This Palamon gan knet his browes twaye  
@@ -30,7 +30,7 @@ Til þat þe deþ departe schal us twayn
 Neither in loue for to hinder oþer  
 Ne in non oþer cas my lieue broþer  
 But þat þou scholdest trewly forþer more  
-In euery caas and I schal forþre þe more  
+In euery caas and I schal forþre þe þore  
 This was þin oþ and myn also certeine  
 I wot right wel þou darst it not wiþ seyne  
 Thus art þou of my counseil out of doute  
