--- a/transcriptions/17r.md
+++ b/transcriptions/17r.md
@@ -3,8 +3,8 @@ title: "Transcription of folio 16r"
 date: June 2018
 ---
 
-- [ ] Transcribed
-- [ ] Double checked
+- [X] Transcribed
+- [X] Double checked
 
 To helpe me if it lay in thy might  
 Or elles art þou fals I dar wel sayn  
@@ -12,14 +12,14 @@ This Arcite ful proudly spak agayn
 Thou schalt quod he be raþer fals þan I  
 But þou art fals I telle þe witterly  
 ¶ffor ꝑamour I loued hir first er þou  
-What wilt þou seyn þou wist it nought yit now  
-Wheþur sche be a wōman or goddesse  
-Thin is affection̄ of holynesse  
+what wilt þou seyn þou wist it nought yit now  
+wheþur sche be a wōman or goddesse  
+Thin is affeccion̄ of holynesse  
 And myn is loue as to a creature  
 ffor which I tolde þe myn auenture  
 As to my cosyn and to my broþer sworn  
 I pose þat þou louedest hire biforn  
-Wostow nought wel þe olde clerkes sawe  
+wostow nought wel þe olde clerkes sawe  
 That who schal ȝiue a louer eny lawe  ¶Quis legẻ dat amantibꝫ  
 loue is a gretter lawe by my pan  
 Than may be yeue to eny erthly man  
@@ -31,9 +31,9 @@ Al be sche mayde or wydow or elles wif
 And eek it is not likly al þi lif  
 To stonden in hir grace namore schal I  
 ffor wel þou wost þi selue verreily  
-That þou and I ben dampned to prisoon̄  
+That þou and I ben dampned to prison̄  
 Ꝑpetuelly vs gaigneth no Ramson̄  
-We stryuen now as houndes for þe bon  
+we stryuen now as houndes for þe bon  
 They fought alday and ȝet here part was non  
 Ther com a kyte whil þat þei were so wroþe  
 That bar a way þe bon bytwixe hem boþe  
