--- a/transcriptions/17v.md
+++ b/transcriptions/17v.md
@@ -4,7 +4,7 @@ date: May 2018
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 And euerich of vs take his auenture  
 Gret was þe strif and long bitwix hem tweye  
@@ -14,7 +14,7 @@ To telle it ȝou as schortly as I may
 A worþi duk þat highte Ꝑotheus  
 That felawe was vnto duk Theseus  
 Syn þilke day þat þai were children lite  
-Was come to Athenes his felawe to visite  
+was come to Athenes his felawe to visite  
 and for to pleye as he was wont to do  
 ffor in þis world he loued noman so  
 And he loued him als tendurly agayn  
@@ -38,7 +38,7 @@ And he were caught it was accorded þus
 That with a swerd he scholde leese his heed  
 Ther nas non oþer remedie ne reed  
 But takeþ his leeue and homward he him spedde  
-Lat him be war his nekke liþ to wedde  
-How gret a sorwe suffreþ now arcite  
+lat him be war his nekke liþ to wedde  
+how gret a sorwe suffreþ now arcite  
 The deth he feeleþ þurgh his herte smyte  
-He wepeþ.weyleth.crieþ pitously  
+he wepeþ. weyleth. crieþ pitously  
