--- a/transcriptions/18r.md
+++ b/transcriptions/18r.md
@@ -4,10 +4,10 @@ date: June 2018
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 To sleen himself he wayteþ priuely  
-He seide allas þat day þat I was born  
+he seide allas þat day þat I was born  
 Now is my prison̄ worse þan biforn  
 Now is me schape eternaly to dwelle  
 Nought in Purgatori but in helle  
@@ -17,12 +17,12 @@ I fetered in his prison̄ eueremo
 Thanne hadde I ben in blisse and not in woo  
 Only þe sight of hire whom þat I serue  
 þough þat I neuer hire grace may deserue  
-Wolde haue y suffised right ynough for me  
+wolde haue y suffised right ynough for me  
 ¶ Oo deere Cosyn Palamon qd he  
 Thin is þe victorie of þis auenture  
 fful blissefully in prison̄ might þou dure  
 In p̉soun certes nay but paradys  
-Wel haþ fortune torned þe þe dys  
+wel haþ fortune torned þe þe dys  
 That hast þe right of hire and I þabsence  
 ffor possible is syn þou hast hir p̔sence  
 And art a knight a worþi and an able  
@@ -33,12 +33,12 @@ Of alle grace and in so gret despeire
 That þer nys erþe water fyr ne eyre  
 Ne creature þat of hem maked is  
 That may me helpe or don confort in þis  
-Wel ought I sterue in wanhope and distresse  
+wel ought I sterue in wanhope and distresse  
 ffare wel my lif my lust and my gladnesse  
 Allas why pleynen men so in comune  
 On purueance of god or of fortune  
 That ȝiueth hem ful ofte in many a gyse  
-Wel bet þan þey can hemself deuyse  
-Som man defineþ for to haue richesse  
+wel bet þan þey can hemself deuyse  
+Som man desireþ for to haue richesse  
 That cause is of his mordre or gret seknesse  
 And som wolde out of his prison̄ fain  
