--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -3,18 +3,18 @@ title: "Transcription of folio 18v"
 date: June 2018
 ---
 
-- [x] Transcribed
-- [ ] Double checked
+- [X] Transcribed
+- [X] Double checked
 
 That in his hous is of his meyne slain  
 Infinite harmes ben in þis matiere  
-We wot not what þing þat we preyen heere  
-We faren as he þat dronken is as Mous  
+we wot not what þing þat we preyen heere  
+we faren as he þat dronken is as Mous  
 A dronke man wot wel he haþ an hous  
 But he not which þe righte weie is þider  
 And to a dronke man þe weye is slider  
 And certes in þis world so faren we  
-We seeken fast after felicite  
+we seeken fast after felicite  
 But we gon wrong ful ofte trewely  
 Thus may we seyn all and namlich I  
 That wende and hadde a gret opynion̄  
@@ -24,12 +24,12 @@ Ther now I am exiled fro my wele
 Syn þat I may not seen ȝou Emelye  
 I am but ded þer nys no remedye  
 vpon þat oþer syde Palamon  
-Whan þat he wiste þat Arcite was gon   
+whan þat he wiste þat arcite was gon   
 Swich sorwe he makeþ þat þe grete tour  
 Resouneþ of his yollyng and clamour   
 The pure fettres of his schynes grete   
-Were of his bittre salte teeres wete  
-Allas qd he arcita cosy myn  
+were of his bittre salte teeres wete  
+Allas qd he arcita cosyn myn  
 Of all our strif god wot þe fruyt is þin  
 Thou walkest now in Thebes at þi large  
 And of my woo þou yernest litel charge  
