--- a/transcriptions/19v.md
+++ b/transcriptions/19v.md
@@ -4,7 +4,7 @@ date: June 2018
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 That haþ destroyed wel neyh al þe blood  
 Of Thebes with his waste walles wide  
@@ -24,21 +24,21 @@ And arcite is exiled vp his hed
 ffor euermore as out of þat contre  
 Ne neuer he ne schal his lady se  
 ¶ yow louers aske I now þis question̄  
-Who haþ þe wors arcite or Palamon  
+who haþ þe wors arcite or Palamon  
 That oon may seen his lady day by day  
 But in prison̄ moot he duellen ay  
 That oþer wher him list may ride or go  
 But seen his lady schal he neuer mo  
 Now diuineth as ȝou list þat ȝe can  
 ffor I wol telle forth as I bigan  
-Whan that arcite to Thebes comen was  
+whan that arcite to Thebes comen was  
 fful ofte a day he swelte and saide allas  
 ffor seen his lady schal he neuere more  
 And schortly to concluden al his wo  
 So mochel sorwe hadde neuer creature  
 That is or schal whil þat þe world may dure  
-His sleep. his mete. his drink is him by raft  
+his sleep. his mete. his drink is him by raft  
 That lene he wex and drye as is a schaft  
-His yghen holwe and grisly to biholde  
-His hewe falwe and pale as ayssche colde  
+his yghen holwe and grisly to biholde  
+his hewe falwe and pale as ayssche colde  
 And solitarie he was and euer allone  
