--- a/transcriptions/20r.md
+++ b/transcriptions/20r.md
@@ -4,24 +4,24 @@ date: June 2018
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 And waylyng al þe night makyng his mone  
 And if he herde song or instrument  
 Than wolde he weepe he mighte nought be stent  
-So feble were his spiritȝ and he lowe  
+So feble were his spiritz and he lowe  
 And chaunged so þat no man couþe knowe  
-His speche noþer his voys þough men it herde  
+his speche noþer his voys þough men it herde  
 And in his gere for al þe world he ferde  
 Not comly lyk to louers maladye  
 Of heres but raþer lik manye  
 Engendred of humõ malencolik  
-Biforn his celle fantstik  
+Biforn his celle fantastik  
 And schortly torned was al vp and doun  
-Bothe habite and disposicion̄  
+Boþe habite and disposicion̄  
 Of him þis woful louere daun arcite  
-What scholde I alday of his woo endite  
-Whan he endured hadde a ȝeer or tuo  
+what scholde I alday of his woo endite  
+whan he endured hadde a ȝeer or tuo  
 This cruel torment and þis peyne and woo  
 At Thebes in his contre as I seyde  
 vpon a night in sleep as he him leyde  
