--- a/transcriptions/20v.md
+++ b/transcriptions/20v.md
@@ -4,25 +4,25 @@ date: June 2018
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 And right anon it ran him in his mynde  
 Than siþen his face was so disfigured  
 Of maladie þe which he hadde endured  
-He mighte wel if þat he bar him lowe  
-lyue in Athenes euermore vnknowe  
+he mighte wel if þat he bar him lowe  
+lyue in Athenes eueremore vnknowe  
 And seen his lady wel neigh day by day  
 And right anon he changed his array  
 And cladde him as a poure laborer  
 And al allone saf oonly a squier  
 That knew his priuete and al þe caas  
-Which was desgised pouerly as he was  
+which was desgised pouerly as he was  
 To Athenes is he gon þe nexte way  
 And to þe contre he wente vpon a day  
 And atte gate he profred his seruise  
 To drugge and drawe what so men wol deuise  
 And schortly of þis matier for to sein  
-He fille in office with a chamburlein  
+he fille in office with a chamburlein  
 The which þat was dwellyng with Emelye  
 ffor he was wys and sone couþe aspye  
 Of eu̔y ẜuant which þat serueþ here  
@@ -31,12 +31,12 @@ ffor he was yong and mighty for þe nones
 And þerto he was strong and bigge of bones  
 To doon þat eny wight him can deuyse  
 A yeer or tuo he was in þis seruise  
-Page of þe chambre of Emelye þe brighte  
+Page of þe Chambre of Emelye þe brighte  
 And Philostrat he seyde þat he highte  
 ¶ But half so wel byloued aman as he  
 Ne was þer neuer in court of his degre  
-He was so gentil of condicion̄  
-That þurgh out al al the court was his renon̄  
+he was so gentil of condicion̄  
+That þurgh out al the court was his renon̄  
 Thei seide þat it were a charite  
 That Theseus wolde enhaunce his degre  
 And putten him in worschipful seruise  
