--- a/transcriptions/19r.md
+++ b/transcriptions/19r.md
@@ -4,28 +4,28 @@ date: June 2018
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 More þan is myn þat sterue her in a kage  
 ffor I mot weepe and wayle whil þat I lyue  
-With all þe woo þat prison̄ may me ȝiue  
-And eek with peyne þat loue me yueþ also  
+with all þe woo þat prison̄ may me ȝiue  
+And eek with peyne þat loue me yiueþ also  
 That doubleþ al my torment and my wo  
 Ther with þe fyr of gelousie vpsterte  
-With Inne his brest and hente him by þe herte  
+with Inne his brest and hente him by þe herte  
 So woodly þat he lik was to byholde  
 The boxtre or þe asshen deed and colde  
 Than seide he o cruel goddes þat gouerne  
 This world with bynding of your word eterne  
 And writen in þe table of athamaunt  
 youre ꝑlement and ȝour eterne gǖnt  
-What is mankynde more vnto ȝou holde  
+what is mankynde more vnto ȝou holde  
 Than is þe scheep þat roukeþ in þe folde  
 ffor slain is man right as anoþer beeste  
 And dwelleþ eek in p̉son̄ and in arreste  
 And haþ siknesse and gret aduersite  
 And ofte tymes gilteles ꝑ de  
-¶ What gouernance is in þis prescience  
+¶ what gouernance is in þis prescience  
 That gilteles tormenteþ Innocence  
 And encreseth þis is al my penaūce  
 That man is bounden to his obẜuaūce  
@@ -34,11 +34,11 @@ Ther as a beeste may all his lust fulfill
 And whan a beeste is ded he haþ no peyne  
 But after his deth þe man mot weepe ⁊ pleyne  
 Though in þis world he haue care and wo  
-Wiþouten doute it may stonden so  
+wiþouten doute it may stonden so  
 The answere of þis lete I to diuines  
 But wel I wot þat in þis world gret pyne is  
 Allas I see a ẜpent or a þeef  
-That many a treweman haþ do meschief  
+That many a trewe man haþ do meschief  
 Gon at his large and wher him list may turne  
 But I moot ben in p̉son̄ þurgh Saturne  
 And eek þurgh Iuno Ialous and eek wood
