--- a/transcriptions/21r.md
+++ b/transcriptions/21r.md
@@ -4,7 +4,7 @@ date: June 2018
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 Boþe of his deedes and of his goode tonge  
 That Theseus haþ taken him so neere  
@@ -22,23 +22,23 @@ And speke I wol of Palamon alite
 ¶ In derknesse and horrible and strong p̉son̄  
 This seuene ȝeer haþ seten Palamon̄  
 fforpyned what for woo and for distresse  
-Who feleth double sore and heuynesse  
+who feleth double sore and heuynesse  
 But Palamon þat loue drencheþ so  
 That wood out of his wit he goþ for wo  
 And eek þer to he is a prisoner  
 Ꝑpetuelly not oonly for a ȝeer  
-Who couþe ryme in englissh ꝓpurly  
-His martirdom for soþe it am not I  
+who couþe ryme in englissh ꝓpurly  
+his martirdom for soþe it am not I  
 Therfore I passe als lightly as I may  
 ¶ It felle þat in þe seuenþe ȝer of may  
 The þridde night as olde bokes sein  
 That als þis storie telleth more plein  
-Were it by auenture or destinee  
+were it by auenture or destinee  
 As whan a þing is schape it schal be  
 That sone after þe mydnyght Palamon  
 By helpyng of a frende brak prison̄  
 And fleþ þe cite faste as he may goo  
 ffor hadde yeue his gailler drinke soo  
 Of a clarre maad of a certeyn wyn  
-With nercotiks and opie of Thebes fyn  
+with nercotiks and opie of Thebes fyn  
 That al þat night þough þat men wolde him schake  
