--- a/transcriptions/21v.md
+++ b/transcriptions/21v.md
@@ -5,14 +5,14 @@ author: Jenna Schoen
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 The gailler sleep he might not awake  
 And þus he fleeth as fast as euer he may  
 The night was schort and faste by þe day  
 That needes cost he most himseluen hyde  
 And til a groue faste þer bisyde  
-With dredful foot þan stalkeþ Palamon  
+with dredful foot þan stalkeþ Palamon  
 ffor schortly þis was his opinion  
 That in þat groue he wolde him hide alday  
 And in þe night þan woled he take his way  
@@ -30,15 +30,15 @@ That al þe orient laugheth of þe light
 And with his streemes drieth in þe greues  
 The seluir dropes hangyng in þe leeues  
 And Arcita in þe court roial  
-Wiþ Theseus his squier principal  
+wiþ Theseus his squier principal  
 Is rysen and lokeþ on þe mery day  
-Out for to doon his obẜuance to may  
+And for to doon his obẜuance to may  
 Remembryng on þe poynt of his desir  
-He on his courser stertyng as þe fir  
-Is ryden in to þe feeldes him to pleye  
+he on his courser stertyng as þe fir  
+Is riden in to þe feeldes him to pleye  
 Out of þe court were it a myle or tweye  
 And to þe groue of which þat I ȝou tolde  
 By auenture his weye he gan to holde  
 To maken him a garland of þe greues  
-Were it of woodebynde or hawethorne leeues  
+were it of woodebynde or hawethorne leeues  
 And loude he song aȝein þe sonne scheene  
