--- a/transcriptions/22r.md
+++ b/transcriptions/22r.md
@@ -5,17 +5,17 @@ author: "G. E. Saretto"
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 May with all þi floures whit and grene  
-Welcome be þou faire freisshe may  
+welcome be þou faire freisshe may  
 I hope þat I som grene gete may  
 And from his courser with a lusty herte  
 In to þe groue ful hastily he sterte  
 And in a path he rometh vp and doun  
 Ther as by auentur̉ of þis Palamon  
-Was in a busshe þat no man might him see  
-ffor sore aferd if his deth was he  
+was in a busshe þat no man might him see  
+ffor sore aferd of his deth was he  
 No þing ne knewe he þat it was arcite  
 God wot he wolde haue trowed it ful lite  
 But soþ is seide go siþþen many ȝeeres  
@@ -25,7 +25,7 @@ ffor alday meeteþ men at vnsett steuene
 fful litel woot arcite of his felawe  
 That was so neigh to herken of his sawe  
 ffor in þe busshe he sitteþ now ful stille  
-Whan þat arcite hadde Romed al his fille  
+whan þat arcite hadde Romed al his fille  
 And songen al þe Roundel lustily  
 In to a studie he fel sodeinly  
 As doon þese louers in here queynte geeres  
@@ -37,9 +37,9 @@ Right so gan gery venus ouer caste
 The hertes of hir̉ folk right as hire day  
 Is geerful right so chaungeþ sche array  
 Seelde is þe fryday al þe wike y like  
-¶ Whan þat arcite hadde songe he gan to syke  
+¶ whan þat arcite hadde songe he gan to syke  
 And sette him doun wiþouten eny more  
 Allas quod he þat day þat I was bore  
-How longe Iuno þurgh þi cruelte  
-Wiltow werrein Thebes þe Cite  
+how longe Iuno þurgh þi cruelte  
+wiltow werreien Thebes þe Cite  
 Allas y brought is to confusion̄  
