--- a/transcriptions/23r.md
+++ b/transcriptions/23r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 ffor whom þat I haue al þis peyne and wo  
 And art my blood and to my counseil sworn  
@@ -22,7 +22,7 @@ I drede nought þat ouþer þou schalt die
 Or þou ne schalt not louen Emelye  
 Chees which þou wilt or þou schalt not asterte  
 This arcite with ful dispitous herte  
-When he him knew and hadde his tale herde  
+when he him knew and hadde his tale herde  
 As fers as leon̄ pulled out a swerde  
 And seide þus by god þa fitteþ aboue  
 Nere it were þat þou art sike and wood for loue  
@@ -30,13 +30,13 @@ And eek þat þou no wepne hast in þis place
 Thou schuldest neuer out of þis groue pace  
 That þou ne schuldest deyen of myn honde  
 ffor I diffie þe sewrte and þe bonde  
-Which þat þou seist I haue maad to þe  
-What verray fool þink weel þat loue is fre  
-And I wol loue hir maugre al þi might  
+which þat þou seist I haue maad to þe  
+what verray fool þink weel þat loue is fre  
+And I wol loue hir maugre al þy might  
 But for as moche þou art a worþy knight  
 And willest to derreyne hir by batayle  
 Haue her my trouþe to morwe I wol nought fayle  
-Wiþouten wityng of eny oþer wight  
+wiþouten wityng of eny oþer wight  
 That heer I wol be founden as a knight  
 And bringen herneys right ynough for þe  
 And chese þe beste and lef þe worste for me  
