--- a/transcriptions/23v.md
+++ b/transcriptions/23v.md
@@ -5,39 +5,39 @@ author: Jenna Schoen
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 And sle me in þis woode þer I am Inne    
 Thou mayst wel haue þy lady as for me  
 This Palamon answerd I graunt it þe  
-A þus þei ben departed til a morwe  
-Whan ech of hem hadde leyd his feiþ to borwe  
+And þus þei ben departed til a morwe  
+whan ech of hem hadde leyd his feiþ to borwe  
 Occupied out of alle charite  
 O regne þat wolde no felawe haue with þe  
 fful soþ is seid þat loue ne lorschipe  
-Wol not his þankes haue no felaschipe  
-We fynde þat of arcite and Palamon  
+wol not his þankes haue no felaschipe  
+we fynde þat of arcite and of Palamon  
 Arcite is riden anon in to þe toun  
-And so þe morwe er it were dayes light  
+And on þe morwe er it were dayes light  
 fful priuely tuo herneys haþ he dight  
 Boþe sufficant and meete to darreyne  
 The batail in þe feld bitwix hem tweyne  
 And on his hors allone as he was borne  
-He carieth al his harneys him biforne  
+he carieth al his harneys him biforne  
 And in þe groue at tyme and place yset  
 This arcite and þis Palamon ben mette  
 To changen gan þe colour in hire face  
 Right as þe hunters in þe Reigne of trace  
 That stondeþ atte gappe with a spere  
-Whan hunted is þe leoun or þe bere  
+whan hunted is þe leoun or þe bere  
 And heereþ him come russhing in þe greeues  
 And bereþ boþe bowes and þe leeues  
 And þinkeþ here comeþ my mortel enemy  
-Wiþoute faile he moot be deed or I  
+wiþoute faile he moot be deed or I  
 ffor eiþer I mot sleen him atte gappe  
 Or he mot slee me if þat me mys happe  
 So ferden þei in chaungyng of here hewe  
-As fer as euerich of hem oþer knewe
+As fer as euerich of hem oþer knewe  
 Ther nas no good day ne no saluynge  
 But streit wiþouten word or rehersynge  
 Euerich of hem hilp for to arme oþer  
