--- a/transcriptions/24v.md
+++ b/transcriptions/24v.md
@@ -4,17 +4,17 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 Duk Theseus þe streighte wey haþ holde  
 And to þe lannde he rideþ him ful righte  
 ffor þider was þe hert wont to haue his flighte  
 And ouer a brook and so forþ on his wey  
 This Duk wol haue a course at him or twey  
-Wiþ houndes swich as þat him list comaūde  
+wiþ houndes swich as þat him list comaūde  
 And whan þis Duk was come vnto þe launde  
 vnder þe sonne he loked and anon  
-He was war of arcite and Palamon  
+he was war of arcite and Palamon  
 That foughten breeme as it were boles tuo  
 The brighte swerdes wenten to and fro  
 So hidously þat with þe leste strook  
@@ -28,15 +28,15 @@ By mighty mars he schal anon be ded
 That smyteþ eny strok þat I may seen  
 But telleþ me what myster men ȝe ben  
 That ben so hardy for to fighten heere  
-Wiþoute Iuge or oþer officere  
+wiþoute Iuge or oþer officere  
 As it were in a litell liste really  
 ¶ This Palamon answerde hastily  
 And seide sire what needeþ wordes mo  
-We haue þe deþ deserued boþe tuo  
-Tuo wofil wrecches be we tuo caytyues  
+we haue þe deþ deserued boþe tuo  
+Tuo woful wrecches be we tuo caytyues  
 That ben encombred of oure owne lyues  
 And as þou art a rightful lord and Iuge  
-Ne ȝive vs neyþer mercy ne refuge  
+Ne ȝiue vs neyþer mercy ne refuge  
 But slee me first for seinte charite  
 Or slee him for þough þou knowest it lite  
 This is þi mortel fo þis is arcite  
