--- a/transcriptions/25v.md
+++ b/transcriptions/25v.md
@@ -4,7 +4,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 And þough he ferst for Ire quook and sterte  
 he haþ considered schortly in a clause  
@@ -12,7 +12,7 @@ The trespas of hem bothe and eek þe cause
 And al þough þat his Ire hire gilt accused  
 ȝit in his reson̄ he hem boþe excused  
 As þus he þoughte wel þat eu̔y man  
-Wil helpe himself in loue if þat he can  
+wil helpe himself in loue if þat he can  
 And eek deliuere himself out of p̉son̄  
 And eek his herte hadde compassion̄  
 Of wommē for þey wepen euer in oon  
@@ -30,13 +30,13 @@ And schortly whan his Ire is þus goon
 he gan to loken vp with eyghen light  
 And spak þis same wordes al on hight  
 ¶ The god of loue a benedicite  
-How mighty and how gret a lord is he  
+how mighty and how gret a lord is he  
 Aȝeins his might þer gayneþ non obstacles  
-He may be cleped a god of his miracles  
+he may be cleped a god of his miracles  
 ffor he can maken at his owne gise  
 Of euerich herte as þat him list deuise  
 lo her þis arcite and þis Palamon  
-That quytly were out of my p̉son  
+That quytly were out of my p̉soun  
 And might haue lyued in Thebes rially  
 And witen I am here mortel enemy  
 And þat here deþ lith in my might also  
