--- a/transcriptions/26r.md
+++ b/transcriptions/26r.md
@@ -5,14 +5,14 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 Now lokeþ is not þat an heih folye  
 ¶ Who may ben a fool but if he loue  
 Byhold for goddes sake þat fitteþ aboue  
 See how þai bleede be þai not wel arrayed  
 Thus haþ hire lord þe god of loue y paiȝed  
-Hire wages and hire fees for hire seruise  
+hire wages and hire fees for hire seruise  
 And ȝit þei wenen for to ben ful wise  
 That seruen loue for aught þat may bifall  
 But þis is ȝet þe beste game of all  
