--- a/transcriptions/26v.md
+++ b/transcriptions/26v.md
@@ -4,13 +4,13 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 ffor whom ȝe haue þis strif and Ialousie  
-Ȝe wite ȝoure self sche may not wedde tuo  
+ȝe wite ȝoure self sche may not wedde tuo  
 At oones þough ȝe fighten eu̔emo  
 That oon of ȝou al be him loþ or leef  
-He moot go pypen in an yuy leef  
+he moot go pypen in an yuy leef  
 This is to sey sche may not haue boþe  
 Al be ȝe neuer so Ialouse ne so wroþe  
 And for þi I ȝou putte in þis degre  
@@ -18,7 +18,7 @@ That ech of ȝou schal haue his destine
 As him is schape and herkneþ in what wise  
 Lo heer ȝour ende of þat I schal deuyse  
 ¶ My wil is þis for plat conclusion̄  
-Wiþouten eny replicacion̄  
+wiþouten eny replicacion̄  
 If þat ȝow likeþ takeþ it for þe beste  
 That eu̔ych of ȝou schal gon wher him leste  
 ffrely wiþouten Raunceon or daunger  
@@ -40,5 +40,5 @@ As I schal euen Iugge ben and trewe
 ȝe schal non oþer eende wiþ me maken  
 þat on of ȝou ne schal ben deed or taken  
 And if ȝou þinkeþ þis is wel y sayed  
-Sey ȝour avys and holdeþ ȝou appaied  
+Sey ȝour aVys and holdeþ ȝou appaied  
 This is ȝour ende and ȝour conclusion̄    
