--- a/transcriptions/27r.md
+++ b/transcriptions/27r.md
@@ -5,13 +5,13 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
-Who lokeþ lightly now but Palamon̄  
-Who springeþ vp for ioye but arcite  
-Who couþe telle or who couþe it endite  
+who lokeþ lighty now but Palamon̄  
+who springeþ vp for ioye but arcite  
+who couþe telle or who couþe it endite  
 The ioye þat is maked in þe place  
-Whan Theseus haþ don so fair a grace  
+whan Theseus haþ don so fair a grace  
 But doun on knees went euery maner wight  
 And þonked him wiþ all here hert and might  
 And namely þe Tebanes ofte siþe  
@@ -25,15 +25,15 @@ To maken vp þe lystes ryally
 That such a noble theatre as it was  
 I dar wel seyn in þe world þer nas  
 The|circuite a Mile was aboute  
-Walled of stoon and diched al wiþoute  
+walled of stoon and diched al wiþoute  
 Round was þe schap in maner of compas  
 fful of degrees þe heighte of sixty paas  
 Than whan a man was sette on oo degre  
 he lettede nought his felawe for to see  
 Estward þer stood a gate of marbel white  
-Westward right south anoþer in opposite  
+westward right south anoþer in opposite  
 And schortly to conclude such a place  
-Was non in erþe as in so litel a space  
+was non in erþe as in so litel a space  
 ffor in þe lond þer nas no crafty man  
 That Geometrie or ars metrike can  
 Ne purtreiour ne keruer of ymages  
