--- a/transcriptions/27v.md
+++ b/transcriptions/27v.md
@@ -4,7 +4,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 And of þe westward in memorie  
 Of mars he maked hath right such anoþer  
@@ -17,7 +17,9 @@ hath Theseus don wrought in noble wise
 But ȝit hadde I forgetyn to deuyse  
 þe noble peyntyng and þe purtraitures  
 The schap þe contienance and þe figures  
-That weren in þise walle ful pitous to biholde  
+That weren in þise oratories þre  
+fferst in þe temple of venus maist þou se  
+wrought in þe walle ful pitous to biholde    
 The broken sleepes and þe sikes colde  
 þe sacrede teeres and þe waymentyng  
 The fyre strokes of þe desyring  
@@ -36,7 +38,7 @@ By ordre were peynted on þe wal
 And mo þan I can make of mencion̄  
 ffor sothly al þe mont of Citheron̄  
 Ther venus haþ hir principal dwellyng  
-Was schewed on þe wal in portreying  
-Wiþ al þe gardyn and þe lustynesse  
+was schewed on þe wal in portreying  
+wiþ al þe gardyn and þe lustynesse  
 Nat was forȝeten þe porter ydelnesse  
 Ne Narcisus þe faire of yore agon  
