--- a/transcriptions/28v.md
+++ b/transcriptions/28v.md
@@ -4,25 +4,25 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 Of Stubbes scharpe and hidous to biholde  
 In which þer ran a Rombel in a swough  
 And þought a storm schulde bresten euery bough  
 And dounward from an hull vnder a bente  
 Ther stood þe temple of mars armypotente  
-Wrought all of burned steel of which þentre  
-Was long and streyt and gastly for to see  
+wrought all of burned steel of which þentre  
+was long and streyt and gastly for to see  
 And þer out cam a rage and such a vese  
 That it made all þe gates for to rese  
 The northerne light in atte dores schone  
 ffor wyndowe on þe wall ne was þer none  
 Thorugh which men mighte eny light discerne  
-The dores waren all of Atthemant et̔ne  
+The dores waren all of Atthemant et̔ ne  
 ychenchede ouertwart and endlong  
-Wiþ Iren towgh and for to make it strong  
+wiþ Iren towgh and for to make it strong  
 Eu̔y piler þe temple to sustene  
-Was tonne gret of Iren bright and scheene  
+was tonne gret of Iren bright and scheene  
 Ther say I ferst þe derk ymagynynge  
 Of felonye and al þe compassynge  
 The cruel Ire reed as eny glede  
@@ -38,7 +38,7 @@ his herte hath baþed al his here
 The nayl y dryuen in þe schood on night  
 The colde deth wiþ mouþ gapende vprighte  
 Amyddes of þe temple sat meschan̄ce  
-With disconfort and sory contenan̄ce  
+with disconfort and sory contenan̄ce  
 yet saugh I woodnesse laughyng in his rage  
 Armed compleint out hees and feers outrage  
 The karoigne in þe busk wiþ þrote y korue  
