--- a/transcriptions/22v.md
+++ b/transcriptions/22v.md
@@ -5,22 +5,22 @@ author: Jenna Schoen
 ---
 
 - [X] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 The blood Roial of Cadme and Amphion̄  
 Of Cadmus which þat was þe ferste man  
 That Thebes bult or ferst þe toun bigan  
 And of þe cite first was crouned king  
-Of his lynage am I and his ofspring  
+Of his lynage am I and his ospring  
 By verray ligne as of þe stok roiall  
 And now I am so caytif and so prall  
 That he þat is my mortel enemy  
 I serue him as his squier pouerly  
 And ȝit doþ me Iuno wel more schame  
-ffor I dar nought biknowe myn owene name  
-but þer as I was wont to hight arcite  
+ffor I dar nought biknowe myn owne name  
+But þer as I was wont to hight arcite  
 Now highte I Philostrate nought worþ a myte  
-Allas þou felle mars allas þou Juno  
+Allas þou felle mars allas þou Iuno  
 Thus haþ your ire oure lignage al fordo  
 Gaf only me and wrecched Palamon  
 That Theseus martireþ in prison̄  
@@ -36,7 +36,7 @@ So þat I cowde don aught to ȝoure plesance
 And with þat word he fel doun in a traunce  
 A long tyme and aftirward he vpsterte  
 This Palamon þat þought þat þorugh his herte   
-He felte a cold swerd sodeinliche glyde  
+he felte a cold swerd sodeinliche glyde  
 ffor yre he quok no lenger wolde he byde  
 And whan þat he had herd Arcites tale  
 As he were wood with face deed and pale  
