--- a/transcriptions/24r.md
+++ b/transcriptions/24r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 They foynen ech at oþer wonder longe  
 Thou mightest wene þat þis Palamon  
@@ -20,7 +20,7 @@ The destenye Ministre gen̔al
 That executeþ in þe world ouer al  
 The purueance þat god haþ seie bifore  
 So strong it is þat þei þe world hadde it swore  
-The contraire of a þing be ȝe or nay
+The contraire of a þing be ȝe or nay  
 ȝet som tyme it schal falle on a day  
 þat falleþ nought eft wiþinne a þousend ȝere  
 ffor certeinly oure appetites heere  
@@ -31,14 +31,14 @@ That for to hunte is so desirous
 And namly atte grete hert in may  
 That in his bedde þer daweþ him no day  
 That he nys cladde and redy for to ride  
-Wiþ hunte and horn and houndes hym besyde  
+wiþ hunte and horn and houndes hym besyde  
 ffor in his huntyng haþ he such delit  
 That it is all his ioye and appetyt  
 To ben himself þe grete hertes bane  
 ffor after mars he serueþ now Diane  
 Cler was þe day as I haue told er þis  
 And Theseus with alle ioye and blys  
-With his ypolita þe faire queene  
+with his ypolita þe faire queene  
 And Emelye cloþed al in greene  
 On huntyng ben þei riden really  
 And to þe groue þat stood ful faste by  
