--- a/transcriptions/25r.md
+++ b/transcriptions/25r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 ffor which he haþ deserued to be ded  
 ffor þis is he þat com vnto þi gate  
@@ -17,28 +17,28 @@ ffor siþ þat day is come þat I schal dye
 I make pleynly my confession̄  
 That I am þilke woful Palamon  
 þat haþ þi p̉son̄ broke wikkedely  
-I am þi mortel foo ⁊ am I  
+I am þi mortel foo ⁊ it am I  
 That loueþ so hote Emelya þe brighe  
 That I wol dye p̔sent in hir sighte  
-Wher fore I axe deþ and my Iuwise  
+wher fore I axe deþ and my Iuwise  
 But sle my felawe in þe same wise  
 ffor boþe haue we deserued to be slayn  
 ¶ This worþi duk answerde anon agayn  
 And seide þis is a schort conclusioun  
 your owne mouþ be ȝoure confession̄  
-Haþ dampned ȝou and I wol it recorde  
+haþ dampned ȝou and I wol it recorde  
 It needeþ nought to pyne ȝou with þe corde  
 ye schal be ded by mighty mars þe reede  
 The queen anon for verrey wōmanhede  
 Com for to wepe and so dide Emelye  
 And all þe ladies of þe compaignye  
-Gret pite was it as it þought hem all
+Gret pite was it as it þought hem all  
 That euer such a chaunce schulde falle  
 ffor gentil men þei were of gret estat  
 And noþing but for loue was þis debat  
 And saugh hire bloody woundes wide and sore  
 And all cryeden boþe lasse and more  
-Haue mercy lord vpon vs wōmen all  
+haue mercy lord vpon vs wōmen all  
 And on here bare knees doun þei fall  
 And wolde haue kist his feet þer as he stood  
 Til atte laste aslaked was his mood  
