--- a/transcriptions/28r.md
+++ b/transcriptions/28r.md
@@ -5,14 +5,14 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 Ne yet þe folie of king Salomon  
-Ne ȝit þe grete strengþe of Hercules  
+Ne ȝit þe grete strengþe of hercules  
 Thenchauntementz of Medea and Circes  
 Ne of Turnus wiþ þe hardy fiers corrage  
 The riche Crysus kaytif in seruage  
-Thus may ȝe seen þat Wisdom ne richesse  
+Thus may ȝe seen þat wisdom ne richesse  
 Beaute ne sleighte strengþe ne hardynesse  
 Ne may wiþ venus holde chamꝑtye  
 ffor as hire list þe world þanne may sche gye  
@@ -21,20 +21,20 @@ Til þei for woo ful ofte seyde allase
 Suffiseth here ensamples oon or tuo  
 And þough I couþe rekne a þousand mo  
 The statue of venus glorious for to see  
-Was inaked fleetyng in þe large see  
+was inaked fleetyng in þe large see  
 And fro þe nauel doun al couered was  
-Wiþ wawes greene and bright as eny glas  
+wiþ wawes greene and bright as eny glas  
 O citole in hir right hond hadde sche  
-And on hire heed fil semely for to see  
+And on hire heed ful semely for to see  
 A rose garlond freissch and wel smellynge  
 Aboue hir heed hir doufes flykerynge  
 Biforn hire stood hir sone Cupido  
 vpon his schuldernes wenges hadde he tuo  
 And blynd he was as it is ofte seene  
 A bowe he bar and arwes bright and keene  
-Whi schulde I nought as wel eek telle þe halle  
+whi schulde I nought as wel eek telle þe halle  
 The purtraiture þat was vpon þe walle  
-Wiþinne þe temple of mighty mars þe reede  
+wiþinne þe temple of mighty mars þe reede  
 Al peynted was þe wal in lengþe and brede  
 lik to þe eestres of þe grisly place  
 That highte þe grete temple of Mars in trace  
@@ -42,4 +42,4 @@ In þilke colde frosty regioun
 Ther as Mars haþ his sou̔aigne mansion̄  
 ffirst on þe wal was peynted a foreste  
 In which þer dwelled neyþer man ne beste  
-Wiþ knotty knarry bareyne trees olde  
+wiþ knotty knarry bareyne trees olde  
