--- a/transcriptions/29r.md
+++ b/transcriptions/29r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 A þousand y slayn and nought of qualme y storue  
 The Tiraunt with his preye his force thraste  
@@ -22,16 +22,16 @@ The barbour and þe bocher and þe smith
 That forgeþ scharpe swerdes on his stith  
 And all aboue depeynted in a toure  
 Saugh I conqueste in gret honoure  
-With þe scharpe swerd ouer his heed  
-Hangynge by a subtyl twyned þreed  
-Depeynted was þe slaughtre of Iulius  
+with þe scharpe swerd ouer his heed  
+hangynge by a subtyl twyned þreed  
+depeynted was þe slaughtre of Iulius  
 Of grete Nero and of Anthonius  
 Al be þat ilke time þei were vnborn  
 ȝet was hire deth depeynted þer biforn  
 By manasyng of mars right by figure  
 So was it schewed in þat purtreiture  
 As is depeynted in þe sertres aboue  
-Who schal be slain or elles deed for loue  
+who schal be slain or elles deed for loue  
 Sufficeþ oon ensample in stories olde  
 I may not rekne hem all þough I wolde  
 The statue of mars vpon a carte stood  
@@ -41,5 +41,5 @@ Of sterres þat ben closed in scriptures
 That oon Puella þat oþer Rubeus  
 This god of armes was arrayed þus  
 A wolf þer stood biforn him at his feete  
-Wiþ eighen reede and of a man he eete  
-Wiþ subtill pensell was depeynted þis storie  
+wiþ eighen reede and of a man he eete  
+wiþ subtill pensell was depeynted þis storie  
