small correction more -> mo (l. 36)

--- a/transcriptions/19v.md
+++ b/transcriptions/19v.md
@@ -33,7 +33,7 @@ Now diuineth as ȝou list þat ȝe can
 ffor I wol telle forth as I bigan  
 whan that arcite to Thebes comen was  
 fful ofte a day he swelte and saide allas  
-ffor seen his lady schal he neuere more  
+ffor seen his lady schal he neuere mo  
 And schortly to concluden al his wo  
 So mochel sorwe hadde neuer creature  
 That is or schal whil þat þe world may dure  
