added missing line (l. 11)

--- a/transcriptions/21v.md
+++ b/transcriptions/21v.md
@@ -17,6 +17,7 @@ ffor schortly þis was his opinion
 That in þat groue he wolde him hide alday  
 And in þe night þan woled he take his way  
 To Thebes ward his frendes for to pray  
+On Theseus to helpe him to werray  
 And schortly ouþer he wolde leese his lif  
 Or wynnen Emely to his louely wif  
 This is þeffecte and his entente playn  
