--- a/transcriptions/19r.md
+++ b/transcriptions/19r.md
@@ -18,7 +18,7 @@ The boxtre or þe asshen deed and colde
 Than seide he o cruel goddes þat gouerne  
 This world with bynding of your word eterne  
 And writen in þe table of athamaunt  
-youre ꝑlement and ȝour eterne gǖnt  
+youre ꝑlement and ȝour eterne gũnt  
 what is mankynde more vnto ȝou holde  
 Than is þe scheep þat roukeþ in þe folde  
 ffor slain is man right as anoþer beeste  
