--- a/transcriptions/32v.md
+++ b/transcriptions/32v.md
@@ -9,7 +9,7 @@ author: Jenna Schoen
 And made a signe wherby þat he took  
 That his prayer accepted was þat day  
 ffor þough þe signe schewed a delay  
-Ȝit wist he weel þat gǖnted was his boone  
+Ȝit wist he weel þat gũnted was his boone  
 And with glad herte he went him home ful soone  
 The þridde hour inequal þat Palamon  
 Bigan to venus temple for to gon  
