added missing line (l. 41)

--- a/transcriptions/24v.md
+++ b/transcriptions/24v.md
@@ -38,6 +38,7 @@ That ben encombred of oure owne lyues
 And as þou art a rightful lord and Iuge  
 Ne ȝiue vs neyþer mercy ne refuge  
 But slee me first for seinte charite  
+But slee my felawe eek as wel as me  
 Or slee him for þough þou knowest it lite  
 This is þi mortel fo þis is arcite  
 That fro þi lond is banyssched on his heede  
